<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/regular"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:fontFamily="@font/regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints=""
        android:gravity="right"
        tools:ignore="RtlHardcoded"/>

    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/re_type_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints=""
        android:gravity="right"
        tools:ignore="RtlHardcoded"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Building_ID"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/regular"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/Building_ID"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="46dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:gravity="right"
            android:hint="@string/building_id"
            android:visibility="invisible"
            android:padding="15dp"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded" />


        <Spinner
            android:id="@+id/option_Building_ID"
            android:layout_width="368dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="46dp"
            android:layout_marginRight="20dp"
            android:spinnerMode="dropdown"
           />

        <ImageButton
            android:id="@+id/Login"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/swipeLeft"
            android:layout_below="@+id/register"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="183dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#80FFFFFF"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_arrow_left"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/swipe_right_for_login"
            android:textSize="15sp" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="182dp"
            android:layout_marginBottom="89dp"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="250dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:text="@string/box" />

    </RelativeLayout>

</LinearLayout>