<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    android:windowSoftInputMode="adjustResize"
    android:layoutDirection="rtl">

    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/header_bg"
        android:foregroundGravity="top" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_view"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_botom" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_subtitle"
        android:layout_alignParentTop="true"
        android:gravity="center|right"
        android:fontFamily="@font/regular"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_margin="15sp"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_email"
        android:layout_below="@id/input_email"
        android:layout_alignTop="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginBottom="8dp"
        android:fontFamily="@font/regular"
        android:text="בואו והתחברו אלינו"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto_regular"
        android:layout_above="@id/input_password"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints=""
        android:gravity="right"
        tools:ignore="RtlHardcoded"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/regular"
        android:textColor="@android:color/white"
        android:text="@string/login"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignBottom="@+id/register"
        android:layout_marginBottom="-44dp"
        android:background="@drawable/bottom_bg"
        android:foregroundGravity="center" />
    <ImageButton
        android:id="@+id/register"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo1"
        android:src="@drawable/ic_arrow_right"
        android:backgroundTint="#80FFFFFF"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_register"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="212dp"
        android:visibility="invisible" />




</RelativeLayout>